src/styles/main.scss
@import url('https://fonts.googleapis.com/css?family=Lato|Roboto+Mono&display=swap');

$color01: #EAECE9;
$color02: #BEC3C9;
$color03: #70F2FC;
$color04: #F59E40;
$color05: #5ABC64;
$color06: #56BCCA;
$color07: #EE7FB3;
$color08: #F8F8F8;
$color09: #3A5783;

$color10: #3498db;

body {
  font-family: 'Lato', sans-serif;
  background-color: $color08;

  h3,
  h4 {
    font-weight: 400;
  }
}

.wrapper {
  max-width: 800px;
  margin: 0 auto;
  display: grid;
  grid-gap: 10px 0;
  justify-items: center;
  align-items: center;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: 65px 235px 45px 60px auto;
  grid-template-areas:
    "head head . ."
    "labels labels languages languages"
    ". keywords keywords ."
    ". get reset ."
    "results results results results";
}

.header {
  grid-area: head;

  .page-title {
    font-family: 'Roboto Mono', monospace;
  }
}

.labels-group {
  grid-area: labels;
}

.languages-group {
  grid-area: languages;
}

.keywords-input {
  grid-area: keywords;
}

.get-button-wrapper {
  grid-area: get;
  align-self: center;
  justify-self: end;
  padding-right: 10px;
}

.reset-btn-wrapper {
  grid-area: reset;
  align-self: center;
  justify-self: start;
  padding-left: 10px;
}

.loading-spinner {
  grid-area: loading;
  grid-column: 2 / 4;
  grid-row: 6 / 7;
  margin-top: 50px;
}

.initial-greeting {
  grid-column: 1 / 5;
  grid-row: 6 / 7;

  .get-issues-text {
    font-weight: 700;
  }
}




.toggle-title {
  margin-left: 6px;
  vertical-align: top;
}

.get-issues-btn {
  width: 110px;
  height: 42px;
  color: #e7ff20;
  background-color: #7999a9;
  box-shadow: 2px 5px 10px var(--color-smoke);

  font-size: 13px;
  font-weight: 450;
}

.reset-btn {
  width: 82px;
  height: 28px;
  color: #e7ff20;
  background-color: #7999a9;
  font-weight: 450;
  box-shadow: 2px 5px 10px var(--color-smoke);
}


.keywords-text-input {
  border: 2px solid #aaa;
  border-radius: 4px;
  outline: none;
  padding: 8px;
  transition: 0.3s;
  width: 125px;

  &:focus {
    border-color: dodgerBlue;
    box-shadow: 0 0 8px 0 dodgerBlue;
  }
}

// Move to separate file
.results {
  grid-area: results;
  max-width: 800px;

  @media only screen and (max-width: 800px){
    max-width: 100vw;
  }

  .result-wrapper {
    .result-header {
      img {
        width: 30px;
      }

      .issue-link {
        margin-left: 12px;
        text-decoration: none;
        color: black;
        font-size: 26px;

      }
    }

    .result-body {
      height: 100px;
    }

  }
}

